[gd_scene load_steps=6 format=3 uid="uid://bgypaxi13hqsf"]

[ext_resource type="Script" uid="uid://dopqsc7iyi0yq" path="res://main.gd" id="1_ig7tw"]
[ext_resource type="PackedScene" uid="uid://bdxwca7mo428q" path="res://enemy.tscn" id="2_h2yge"]
[ext_resource type="PackedScene" uid="uid://bya78ws32kii7" path="res://player.tscn" id="3_1bvp3"]
[ext_resource type="PackedScene" uid="uid://bmetogr1q8063" path="res://hud.tscn" id="4_1bvp3"]

[sub_resource type="Curve2D" id="Curve2D_7dm0k"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1911, 0, 0, 0, 0, 0, 1912, 1069, 0, 0, 0, 0, 2, 1068, 0, 0, 0, 0, 0, 2, 0, 0, 0, 0, 0, 0)
}
point_count = 6

[node name="Main" type="Node"]
script = ExtResource("1_ig7tw")
enemy_scene = ExtResource("2_h2yge")

[node name="Player" parent="." instance=ExtResource("3_1bvp3")]

[node name="EnemyTimer" type="Timer" parent="."]

[node name="EnemyScaleTimer" type="Timer" parent="."]
wait_time = 6.0
autostart = true

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(550, 325)

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_7dm0k")

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]

[node name="HUD" parent="." instance=ExtResource("4_1bvp3")]

[connection signal="has_dashed" from="Player" to="." method="_on_player_has_dashed"]
[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_enemy_timer_timeout"]
[connection signal="timeout" from="EnemyScaleTimer" to="." method="_on_enemy_scale_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="dash_recharged" from="HUD" to="." method="_on_dash_recharged"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
